# vg101

./: CMakeLists.txt  Changelog.md  README.md  disp_card.c  disp_player_card.c  draw_card.c  game_start.c  give_card.c  have_winner.c  header.h  initialize_all_players.c  initialize_index_to_card.c  initialize_stock_pile.c  main.c  player_give_card.c  player_swap.c  regive_order.c  reinitialize_all_players.c  shuffle_card.c  sort_card.c  swap_card_rankandsuit.c  whether_demo_play.c  whether_play.c
